# scramblery

./: .gitignore  404.html  BUILD.md  CITATION.cff  FromImage.py  FromtheVideo.py  INSTALL.md  JSsourceCode.js  LICENSE  README.md  THIRD_PARTY_LICENSES  WholeImageRectSty.py  bundle.js  cargo.toml  index.html  jssource.js  magic.html  main.js  mkdocs.yml  package-lock.json  package.json  pixeldance.html  scramblery.html  scramblerydemo.html  search.html  sitemap.xml
.github/workflows/: python-publish.yml  release.yml
api_reference/: index.html
css/: pixeldance.css
docs/: api_reference.md  bundle.js  index.md  magic.html  main.js  package-lock.json  pixeldance.html  scramblerydemo.html  userguide.md
docs/css/: pixeldance.css
docs/js/: animation.js  bundle.js  pixeldance.js  scramblery.js
engine/: Cargo.toml
engine/src/: lib.rs
engine/src/batch/: mod.rs  types.rs
engine/src/scramble/: block.rs  blur.rs  diffeomorphic.rs  fourier.rs  mod.rs  pixel.rs  types.rs
engine/src/utils/: image.rs  mod.rs
engine/src/video/: mod.rs
face_detection/: Cargo.toml
face_detection/src/: lib.rs
js/: animation.js  bundle.js  pixeldance.js  scramblery.js
onnx/: Cargo.toml
onnx/src/: lib.rs
optical_flow/: Cargo.toml
optical_flow/src/: lib.rs
scramblery/: README.md  README.rst  api_reference.md  pyproject.toml
scramblery/scramblery/: __init__.py  scramblery.py
scramblery/tests/: test_scramblery.py
search/: search_index.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
ui/: package-lock.json  package.json
ui/src/: App.css  App.tsx  BlockControls.tsx  BlurControls.tsx  DiffeomorphicControls.tsx  FourierControls.tsx  folderprocess.tsx  singleimage.tsx  videoprocess.tsx
ui/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: lib.rs  main.rs
ui/src/comp/: BackButton.tsx  MainMenu.tsx
userguide/: index.html
video-processor/: Cargo.toml  PIPELINE.md
video-processor/src/: lib.rs
