[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
rayon = "1.10.0"
num-complex = "0.4.6"
itertools = "0.14.0"
rustfft = "6.2.0"
image = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
ndarray = { workspace = true }
face_detection = { path = "../face_detection" }
optical_flow = { path = "../optical_flow" }
video-processor = { path = "../video-processor" }