[package]
name = "scramblery"
version = "0.1.0"
description = "Scramblery"
authors = ["@altunenes"]
edition = "2021"

[features]
cuda = ["engine/cuda"]
migraphx = ["engine/migraphx"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
engine = { path = "../../engine" }
tauri = { version = "2.2.5", features = [] }
tauri-plugin-shell = "2.2.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tauri-plugin-fs = "2.2.0"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-log = "2.2.1"
